<resources>
    <string name="app_name">StoreSoftware</string>
    <string name="button_login_text">Ingresar</string>
    <string name="button_register_text">Registrar usuario</string>
    <string name="editTextHint_password">Contraseña</string>
    <string name="editTextHint_username">Nombre de usuario</string>
    <string name="NameApp">SIGT</string>
    <string name="user_main">Usuario</string>
    <string name="product_main">Productos</string>
    <string name="sale_main">Ventas</string>
    <string name="shopping_main">Compras y gastos</string>
    <string name="employees_main">Empleados</string>
    <string name="address_register_store">Direccion de la tienda</string>
    <string name="name_register_store">Nombre de la tienda</string>
    <string name="button_register_store_text">Registrar Tienda</string>
    <string name="title_register_store">Registro de la tienda</string>
    <string name="title_register_purchase_receipt">REGISTRAR COMPRA</string>
    <string name="editTextHint_date">Fecha</string>
    <string name="editTextHint_description">Descripción</string>
    <string name="editTextHint_units">Unidades</string>
    <string name="editTextHint_price">Precio</string>
    <string name="button_register_purchase_receipt">Crear Recibo</string>
    <string name="button_back">Volver</string>
</resources>