<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp_darkTheme"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.shopping.Register.CreatePurchasesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/title_register_purchase_receipt"
        android:textAlignment="center"
        android:textColor="@color/textColor_darkTheme"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/editTextHint_date"
        android:padding="5dp"
        android:textColorHint="@color/textColor_darkTheme"
        app:boxBackgroundColor="@color/backgroundEditText_darkTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:textColor="@color/textColor_darkTheme"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/editTextHint_description"
        android:padding="5dp"
        android:textColorHint="@color/textColor_darkTheme"
        app:boxBackgroundColor="@color/backgroundEditText_darkTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:inputType="textMultiLine"
            android:textColor="@color/textColor_darkTheme"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUnit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/editTextHint_units"
        android:padding="5dp"
        android:textColorHint="@color/textColor_darkTheme"
        app:boxBackgroundColor="@color/backgroundEditText_darkTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/textColor_darkTheme"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/editTextHint_price"
        android:padding="5dp"
        android:textColorHint="@color/textColor_darkTheme"
        app:boxBackgroundColor="@color/backgroundEditText_darkTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:textColor="@color/textColor_darkTheme"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreatePurchaseReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:backgroundTint="@color/backgroundButton_neutral_darkTheme"
        android:text="@string/button_register_purchase_receipt"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:backgroundTint="@color/backgroundButton_neutral_darkTheme"
        android:text="@string/button_back"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

</LinearLayout>