<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@color/backgroundApp_darkTheme"
    tools:context=".ui.Store.RegisterStoreActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register_store"
        android:layout_margin="5dp"
        android:textColor="@color/backgroundButton_neutral_darkTheme"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textAlignment="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/address_register_store"
        android:padding="5dp"
        android:textColorHint="@color/textColor_darkTheme"
        app:boxBackgroundColor="@color/backgroundEditText_darkTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:maxLength="40"
            android:textColor="@color/textColor_darkTheme"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/name_register_store"
        android:padding="5dp"
        android:textColorHint="@color/textColor_darkTheme"
        app:boxBackgroundColor="@color/backgroundEditText_darkTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:maxLength="40"
            android:textColor="@color/textColor_darkTheme"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:backgroundTint="@color/backgroundButton_register_darkTheme"
        android:text="@string/button_register_store_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:cornerRadius="5dp" />

</LinearLayout>