<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp_darkTheme"
    tools:context=".ui.home.MainActivity">


    <FrameLayout
        android:id="@+id/viewToolBar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Información tienda"/>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:src="@drawable/ic_back"
            android:padding="16dp"/>
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewToolBar"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/btnUser"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/cardview_darkTheme"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:src="@drawable/information_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/user_main"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnProduct"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/cardview_darkTheme"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:src="@drawable/product_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/product_main"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSale"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/cardview_darkTheme"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:src="@drawable/sale_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/sale_main"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnShopping"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/cardview_darkTheme"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:src="@drawable/buy_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/shopping_main"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnEmployees"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/cardview_darkTheme"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:src="@drawable/employees_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/employees_main"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>